--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <groupId>selenium_AmazonFlipkart</groupId>
   <artifactId>selenium_AmazonFlipkart</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
   <build>
     <pluginManagement>
       <plugins>
-		  
-		  
+
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -19,7 +19,7 @@
 			  </suiteXmlFiles>
 		  </configuration>
         </plugin>
-        
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -28,13 +28,13 @@
             <!-- put your configurations here -->
           </configuration>
         </plugin>
-        
+
       </plugins>
     </pluginManagement>
   </build>
-  
+
    <dependencies>
-  
+
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
@@ -119,7 +119,11 @@
     <version>5.0.9</version>
 </dependency>
 
- 
-  
+
+
   </dependencies>
+    <properties>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
+    </properties>
 </project>
